--- a/src/App.css
+++ b/src/App.css
@@ -30,3 +30,7 @@ body.dark-mode {
 .cta-button:hover {
   background-color: #0056b3;
 }
+
+.about-us {
+  font-size: 20px; /* Tamaño de fuente deseado */
+}
